# Daytrader

./: .replit  app.py  chart_utils.py  data_manager.py  pyproject.toml  replit.md  user_manager.py  users.db  utils.py
data/: Test_historical_stocks.json  Test_permanent_stocks.json  Test_reflections.json  Test_stock_trading_plans.json  Test_today_stocks.json  Test_trading_plan.json  chart_drawings.json  historical_stocks.json  permanent_stocks.json  reflections.json  stock_trading_plans.json  today_stocks.json
